Fixed overlapping styles

--- a/frontEnd/src/Components/Body/CarrouselCategories.scss
+++ b/frontEnd/src/Components/Body/CarrouselCategories.scss
@@ -35,6 +35,7 @@
   img {
     height: 100%;
     width: 100%;
+    max-height: 100%;
     object-fit: cover;
     object-position: center center;
     border-top-right-radius: globals.$border-radius-lg;
@@ -43,7 +44,11 @@
 
   .container-img {
     flex-basis: 100%;
-    overflow: auto;
+    overflow: hidden;
+
+    a {
+      padding: 0;
+    }
   }
 
   .container-content {
